--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -1067,4 +1067,23 @@
     <string name="lock_clock_calendar_section_title">Calendar events</string>
     <string name="lock_clock_calendar_section_summary">View or change how the calendar of the \'cLock\' Home widget will display</string>
 
+    <!-- Fusion Download Center -->
+    <string name="download_category">Download Center</string>
+    <string name="download_category_summary">Find all of your fusion rom support needs inside</string>
+    <string name="rom_category">Rom Download</string>
+    <string name="extra_category">Extra</string>
+    <string name="gapps_category">GAPPS Packages</string>
+    <string name="fusion_official_title">Fusion Official Builds</string>
+    <string name="fusion_official_summary">Download the latest Stable release of Fusion rom</string>
+    <string name="fusion_nightly_title">Fusion Nightly Builds</string>
+    <string name="fusion_nightly_summary">Download the latest Nightlies releases of Fusion rom</string>
+    <string name="fusion_kernel_title">Fusion Kernel</string>
+    <string name="fusion_kernel_summary">Download the latest Fusion Kernel</string>
+    <string name="fusion_recovery_title">Fusion Recovery</string>
+    <string name="fusion_recovery_summary">Download the latest Fusion Recovery</string>
+    <string name="fusion_gapps_title">Fusion Gapps</string>
+    <string name="fusion_gapps_summary">Fusion Gapps are generally recommended gapps for use on Fusion rom</string>   
+    <string name="pa_gapps_title">PA Gapps</string>
+    <string name="pa_gapps_summary">Fully packed with the majority of GAPPS, these are commonly used by users that do not want to download/install them later</string>
+
 </resources>
