--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -1090,4 +1090,11 @@
     <string name="fusion_changelog">Latest changelogs</string>
     <string name="fusion_changelog_summary">See the latest source changes for fusion rom</string>
 
+    <!-- Doze pulse (ambient display) notification timeout -->
+    <string name="doze_timeout_title">Ambient display timeout</string>
+    <string name="doze_timeout_summary">Time that the screen stays on for notification pulse</string>
+
+    <!-- Doze (ambient display) preference category -->
+    <string name="display_category_doze_options_title">Ambient display options</string>
+
 </resources>
