--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -80,12 +80,6 @@
                 android:title="@string/lift_to_wake_title"
                 android:persistent="false" />
 
-        <SwitchPreference
-                android:key="doze"
-                android:title="@string/doze_title"
-                android:summary="@string/doze_summary"
-                android:persistent="false" />
-
         <com.android.settings.FontDialogPreference
                 android:key="font_size"
                 android:title="@string/title_font_size"
@@ -160,6 +154,24 @@
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.android.settings.ScreenColorSettings" />
          </PreferenceScreen>
+
+        <PreferenceCategory
+            android:key="category_doze_options"
+            android:title="@string/display_category_doze_options_title" >
+
+            <SwitchPreference
+                    android:key="doze"
+                    android:title="@string/doze_title"
+                    android:summary="@string/doze_summary"
+                    android:persistent="false" />
+
+            <!-- Ambient display timeout -->
+            <SlimSeekBarPreference
+                    android:key="doze_timeout"
+                    android:title="@string/doze_timeout_title"
+                    android:summary="@string/doze_timeout_summary" />
+
+         </PreferenceCategory>
 
          <PreferenceCategory
              android:key="category_wakeup_options"
