--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -1004,24 +1004,28 @@
     <string name="animation_no_scroll_summary_off">Disabled</string>
     <string name="scroll_disclaimer_summary">Note: Most apps need to be restarted for custom values to take effect</string>
 
-    <!-- Animation controls -->
+    <!-- Animation Controls -->
     <string name="animation_controls_title">Animation controls</string>
     <string name="animation_controls_summary">Change direction of the system animations</string>
-    <string name="activity_open_title">Activity open</string>
-    <string name="activity_close_title">Activity close</string>
-    <string name="task_open_title">Task open</string>
-    <string name="task_close_title">Task close</string>
-    <string name="task_move_to_front_title">Move to front</string>
-    <string name="task_move_to_back_title">Move to back</string>
-    <string name="wallpaper_open_title">Wallpaper open</string>
-    <string name="wallpaper_close_title">Wallpaper close</string>
-    <string name="wallpaper_intra_open_title">Wallpaper intra open</string>
-    <string name="wallpaper_intra_close_title">Wallpaper intra close</string>
-    <string name="animation_duration_title">Animation duration</string>
-    <string name="title_animation_no_override">Prevent app overrides</string>
-    <string name="summary_animation_no_override">Prevent apps from overriding transitions</string>
+    <string name="title_animation_controls">System Animations</string>
+    <string name="activity_open_title">Activity Open Animation</string>
+    <string name="activity_close_title">Activity Close Animation</string>
+    <string name="task_open_title">Task Open Animation</string>
+    <string name="task_close_title">Task Close Animation</string>
+    <string name="task_move_to_front_title">Move To Front Animation</string>
+    <string name="task_move_to_back_title">Move To Back Animation</string>
+    <string name="wallpaper_open_title">Wallpaper Open Animation</string>
+    <string name="wallpaper_close_title">Wallpaper Close Animation</string>
+    <string name="wallpaper_intra_open_title">Wallpaper Intra Open Animation</string>
+    <string name="wallpaper_intra_close_title">Wallpaper Intra Close Animation</string>
+    <string name="task_open_behind_title">Task open behind animation</string>    
+    <string name="animation_duration_title">Animation Duration</string>
+    <string name="title_animation_no_override">Prevent App Overrides</string>
+    <string name="summary_animation_no_override">Prevent apps from overriding transitions.</string>
     <string name="animation_duration_default">Default</string>
-    <string name="header_summary_animation" translatable="false">@null</string>
+    <string name="header_summary_animation">@null</string>
+    <string name="animation_exit_only_title">Enter only animation</string>
+    <string name="animation_reverse_exit_title">Reverse exit animation</string>
 
     <!-- IME animations -->
     <string name="ime_animation_title">IME animations</string>
