--- a/res/xml/animation_controls.xml
+++ b/res/xml/animation_controls.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2014 The Fusion Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,58 +14,71 @@
      limitations under the License.
 -->
 
-<PreferenceScreen
-    android:title="@string/animation_controls_title"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ListPreference
-        android:key="activity_open"
-        android:title="@string/activity_open_title" />
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+            android:defaultValue="true"
+            android:key="animation_controls_exit_only"
+            android:summary="@string/animation_exit_only_title"
+            android:title="@string/animation_exit_only_title" />
 
-    <ListPreference
-        android:key="activity_close"
-        android:title="@string/activity_close_title" />
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+            android:defaultValue="false"
+            android:key="animation_controls_reverse_exit"
+            android:summary="@string/animation_reverse_exit_title"
+            android:title="@string/animation_reverse_exit_title" />
 
-    <ListPreference
-        android:key="task_open"
-        android:title="@string/task_open_title" />
+        <ListPreference
+            android:key="activity_open"
+            android:title="@string/activity_open_title" />
 
-    <ListPreference
-        android:key="task_close"
-        android:title="@string/task_close_title" />
+        <ListPreference
+            android:key="activity_close"
+            android:title="@string/activity_close_title" />
 
-    <ListPreference
-        android:key="task_move_to_front"
-        android:title="@string/task_move_to_front_title" />
+        <ListPreference
+            android:key="task_open"
+            android:title="@string/task_open_title" />
 
-    <ListPreference
-        android:key="task_move_to_back"
-        android:title="@string/task_move_to_back_title" />
+        <ListPreference
+            android:key="task_close"
+            android:title="@string/task_close_title" />
 
-    <!-- <SwitchPreference
-        android:key="animation_no_override"
-        android:title="@string/title_animation_no_override"
-        android:summary="@string/summary_animation_no_override" /> -->
+        <ListPreference
+            android:key="task_move_to_front"
+            android:title="@string/task_move_to_front_title" />
 
-    <ListPreference
-        android:key="wallpaper_open"
-        android:title="@string/wallpaper_open_title" />
+        <ListPreference
+            android:key="task_move_to_back"
+            android:title="@string/task_move_to_back_title" />
 
-    <ListPreference
-        android:key="wallpaper_close"
-        android:title="@string/wallpaper_close_title" />
+        <SwitchPreference
+            android:key="animation_no_override"
+            android:title="@string/title_animation_no_override"
+            android:summary="@string/summary_animation_no_override" />
 
-    <ListPreference
-        android:key="wallpaper_intra_open"
-        android:title="@string/wallpaper_intra_open_title" />
+        <ListPreference
+            android:key="wallpaper_open"
+            android:title="@string/wallpaper_open_title" />
 
-    <ListPreference
-        android:key="wallpaper_intra_close"
-        android:title="@string/wallpaper_intra_close_title" />
+        <ListPreference
+            android:key="wallpaper_close"
+            android:title="@string/wallpaper_close_title" />
 
-    <com.android.settings.widgets.AnimBarPreference
-        android:key="animation_duration"
-        android:title="@string/animation_duration_title" />
+        <ListPreference
+            android:key="wallpaper_intra_open"
+            android:title="@string/wallpaper_intra_open_title" />
+
+        <ListPreference
+            android:key="wallpaper_intra_close"
+            android:title="@string/wallpaper_intra_close_title" />
+
+        <ListPreference
+            android:key="task_open_behind"
+            android:title="@string/task_open_behind_title" />
+
+        <com.android.settings.widgets.AnimBarPreference
+            android:key="animation_duration"
+            android:title="@string/animation_duration_title" />
 
 </PreferenceScreen>
