--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -36,6 +36,12 @@
                 android:summary="@string/disable_immersive_message_summary"
                 android:persistent="false" />
 
+        <!-- Screen Recorder -->
+        <PreferenceScreen
+                android:key="screen_recorder"
+                android:title="@string/screen_recorder_title"
+                android:fragment="com.android.settings.fusion.ScreenRecorderSettings" />
+
         </PreferenceCategory>
 
         <PreferenceCategory
