--- a/res/xml/fusion_main_settings.xml
+++ b/res/xml/fusion_main_settings.xml
@@ -29,11 +29,11 @@
             android:fragment="com.android.settings.fusion.InterfaceSettings"
             android:icon="@drawable/ic_fusion_interface_teal" />
 
-        <!-- Animations -->
+        <!-- Screen and Animations -->
         <PreferenceScreen
-            android:id="@+id/animations_settings"
-            android:title="@string/fusion_animations_settings_title"
-            android:fragment="com.android.settings.fusion.AnimationsSettings"
+            android:id="@+id/screen_animations_settings"
+            android:title="@string/fusion_screen_animations_settings_title"
+            android:fragment="com.android.settings.fusion.ScreenAnimationsSettings"
             android:icon="@drawable/ic_fusion_animations_teal" />
 
         <!-- Gestures -->
