--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -2,15 +2,30 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/status_bar_title" >
 
+    <PreferenceCategory
+        android:title="@string/category_general_title" >
+
         <PreferenceScreen
                 android:key="clock_style_pref"
                 android:fragment="com.android.settings.fusion.StatusBarClockStyle"
                 android:title="@string/status_bar_clock" />
 
         <PreferenceScreen
+                android:key="network_traffic"
+                android:fragment="com.android.settings.fusion.NetworkTraffic"
+                android:title="@string/network_traffic_title" />
+
+        <PreferenceScreen
                 android:key="battery_style_pref"
                 android:fragment="com.android.settings.fusion.StatusBarBatteryStyle"
                 android:title="@string/battery_style_title" />
+
+        <PreferenceScreen
+                android:key="quick_settings"
+                android:fragment="com.android.settings.fusion.QsSettings"
+                android:title="@string/qs_title" />
+
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="status_bar_general_category"
@@ -21,17 +36,6 @@
                 android:title="@string/status_bar_toggle_brightness"
                 android:summary="@string/status_bar_toggle_brightness_summary"
                 android:defaultValue="false" />
-
-        <PreferenceScreen
-                android:key="network_traffic_state"
-                android:fragment="com.android.settings.fusion.NetworkTraffic"
-                android:summary="@string/network_traffic_summary"
-                android:title="@string/network_traffic_title" />
-
-        <PreferenceScreen
-                android:key="quick_settings"
-                android:fragment="com.android.settings.fusion.QsSettings"
-                android:title="@string/qs_title" />
 
         <SwitchPreference
                 android:key="status_bar_ticker_enabled"
@@ -50,6 +54,7 @@
                 android:title="@string/status_bar_show_weather_title"
                 android:summary="@string/status_bar_show_weather_summary"
                 android:defaultValue="false" />
+
     </PreferenceCategory>
 
         <SwitchPreference
