[WIP] Add customization for Quick Settings [2/2] [PS1]
Add a new section to customize Quick Settings.

Modified DraggableGridView to arrange the items differently.

Gave everything a "Material-ish" style.

Change-Id: I88f9f067e60e66d51583219c497aab39cb187fb4

Patchset: 1
http://review.cyanogenmod.org/#/c/83418/

--- a/res/xml/fusion_qs_settings.xml
+++ b/res/xml/fusion_qs_settings.xml
@@ -17,6 +17,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+        <PreferenceScreen
+            android:key="qs_order"
+            android:title="@string/qs_order"
+            android:summary="@string/qs_order_summary"
+            android:fragment="com.android.settings.fusion.qs.QSTiles" />
+
         <com.android.settings.fusion.SystemSettingListPreference
             android:key="quick_pulldown"
             android:title="@string/title_quick_pulldown"
@@ -44,4 +50,3 @@
             android:persistent="false" />
 
 </PreferenceScreen>
-
