--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -22,7 +22,7 @@
 
         <PreferenceScreen
                 android:key="quick_settings"
-                android:fragment="com.android.settings.fusion.QsSettings"
+                android:fragment="com.android.settings.fusion.qs.QsSettings"
                 android:title="@string/qs_title" />
 
         <PreferenceScreen
