Add customization for Quick Settings [2/2] (PS16 - FINAL)
Add a new section to customize Quick Settings.

Modified DraggableGridView to arrange the items differently.

Gave everything a "Material-ish" style.

Inversion and Hotspot tiles can be rearranged now.

Creadted a "Notification Drawer" category.

frameworks/base: http://review.cyanogenmod.org/83417/

Change-Id: I88f9f067e60e66d51583219c497aab39cb187fb4

--- a/res/xml/fusion_notification_drawer_settings.xml
+++ b/res/xml/fusion_notification_drawer_settings.xml
@@ -17,14 +17,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/notification_drawer_title">
 
+    <PreferenceCategory
+        android:title="@string/qs_category_title">
+
         <PreferenceScreen
             android:key="qs_order"
-            android:title="@string/qs_order"
-            android:summary="@string/qs_order_summary"
+            android:title="@string/qs_order_title"
             android:fragment="com.android.settings.fusion.qs.QSTiles" />
 
-        <SwitchPreference
-            android:key="qs_main_tiles"
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+            android:key="sysui_qs_main_tiles"
             android:title="@string/qs_main_tiles_title"
             android:summaryOn="@string/qs_main_tiles_summary_on"
             android:summaryOff="@string/qs_main_tiles_summary_off"
@@ -67,5 +69,7 @@
             android:title="@string/block_on_secure_keyguard_title"
             android:summary="@string/block_on_secure_keyguard_summary"
             android:persistent="false" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
