--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -25,6 +25,11 @@
                 android:fragment="com.android.settings.fusion.QsSettings"
                 android:title="@string/qs_title" />
 
+        <PreferenceScreen
+                android:key="status_bar_expanded_header_settings"
+                android:fragment="com.android.settings.fusion.StatusBarExpandedHeaderSettings"
+                android:title="@string/status_bar_expanded_header_settings_title" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -47,12 +52,6 @@
                 android:key="status_bar_notif_count"
                 android:title="@string/status_bar_notif_count_title"
                 android:summary="@string/status_bar_notif_count_summary"
-                android:defaultValue="false" />
-
-        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
-                android:key="status_bar_show_weather"
-                android:title="@string/status_bar_show_weather_title"
-                android:summary="@string/status_bar_show_weather_summary"
                 android:defaultValue="false" />
 
     </PreferenceCategory>
