--- a/res/layout/settings_qs_tiles.xml
+++ b/res/layout/settings_qs_tiles.xml
@@ -24,7 +24,7 @@
               android:padding="16dp"
               android:background="#ddd">
 
-    <com.android.settings.cyanogenmod.qs.DraggableGridView
+    <com.android.settings.fusion.qs.DraggableGridView
             android:id="@+id/qs_gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
