--- a/res/values/fusion_arrays.xml
+++ b/res/values/fusion_arrays.xml
@@ -370,6 +370,7 @@
         <item>@string/app_ops_summaries_delete_call_log</item>
         <item>@string/app_ops_summaries_data_change</item>
         <item>@string/app_ops_summaries_wake_up</item>
+        <item>@string/app_ops_summaries_su</item>
     </string-array>
 
     <string-array name="app_ops_labels_fusion" translatable="false">
@@ -434,6 +435,7 @@
         <item>@string/app_ops_labels_delete_call_log</item>
         <item>@string/app_ops_labels_data_change</item>
         <item>@string/app_ops_labels_wake_up</item>
+        <item>@string/app_ops_labels_su</item>
     </string-array>
 
     <!-- Names of categories of app ops tabs -->
@@ -444,6 +446,7 @@
         <item>@string/app_ops_categories_media</item>
         <item>@string/app_ops_categories_device</item>
         <item>@string/app_ops_categories_bootup</item>
+        <item>@string/app_ops_categories_su</item>
     </string-array>
 
     <!-- clear all recents button location -->
