Mobile and Wifi network icons colors (2/2)
* Ability to enable/disable mobile and wifi network activity.
* Custom mobile and Wifi network activity icons color,
  (normal and fully connected).
* Custom mobile and Wifi network icons color,
  (normal and fully connected).
* Custom airplane mode icon color.

Still work in progress!!

FB: Normal and fully connected functions not working yet.

Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -43,6 +43,12 @@
                 android:defaultValue="false" />
 
         <PreferenceScreen
+                android:key="status_bar_signal_settings"
+                android:title="@string/status_bar_signal_settings_title"
+                android:summary="@string/status_bar_signal_settings_summary"
+                android:fragment="com.android.settings.fusion.StatusBarSignalSettings" />
+
+        <PreferenceScreen
                 android:key="status_bar_notif_system_icons_settings"
                 android:title="@string/status_bar_notif_system_icons_settings_title"
                 android:summary="@string/status_bar_notif_system_icons_settings_summary"
