--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -66,9 +66,6 @@
     <string name="battery_style_reset_message">Reset battery bar color?</string>
     <!-- Fusion Advanced -->
     <string name="fusion_advanced_settings_title">Advanced</string>
-    <!-- Fusion Privacy -->
-    <string name="fusion_privacy_settings_title">Privacy</string>
-    <string name="phone_security_title">Phone security</string>
     <!-- Fusion Sound & Notification -->
     <string name="sound_title">Sound</string>
     <string name="general_sound_category_title">General</string>
@@ -143,27 +140,25 @@
     <string name="ime_switcher_notify">Selector notification</string>
     <string name="ime_switcher_notify_summary">Display input method selector notification</string>
 
+    <!-- Privacy Settings Header item -->
+    <string name="privacy_settings_cyanogenmod_title">Privacy</string>
+    <string name="privacy_settings_cyanogenmod_category" translatable="false">CyanogenMod</string>
+
     <!-- Privacy Guard -->
-    <string name="app_security_title">App security</string>
+    <string name="privacy_guard_switch_label">Enable Privacy Guard</string>
     <string name="privacy_guard_dlg_title">Enable Privacy Guard?</string>
-    <string name="privacy_guard_enable_dlg_text">When Privacy Guard is enabled, %s will not be able to access personal data such as contacts, messages, location or call logs.</string>
-    <string name="privacy_guard_enable_dlg_system_app_text">When enabling Privacy Guard for the built-in app %s, the app will not be able to access personal data such as contacts, messages, location or call logs. This may cause other apps to misbehave.</string>
+    <string name="privacy_guard_dlg_text">When Privacy Guard is enabled, the app will not be able to access personal data such as contacts, messages or call logs.</string>
+    <string name="privacy_guard_dlg_system_app_text">When enabling Privacy Guard for a built-in app, the app will not be able to access or provide personal data. This may cause other apps to misbehave.</string>
     <string name="privacy_guard_default_title">Enabled by default</string>
-    <string name="privacy_guard_default_summary">Do not access personal data by default for newly-installed apps</string>
-    <string name="privacy_guard_notification_title">Notification</string>
-    <string name="privacy_guard_notifiation_summary">Show notification if privacy guard is active.</string>
+    <string name="privacy_guard_default_summary">Enable by default for newly-installed apps</string>
     <string name="privacy_guard_manager_title">Privacy Guard</string>
-    <string name="privacy_guard_manager_summary">Manage which apps have access to your personal data and other apps permissions</string>
+    <string name="privacy_guard_manager_summary">Manage which apps have access to your personal data</string>
     <string name="privacy_guard_no_user_apps">No apps are installed</string>
-    <string name="privacy_guard_filter_does_not_match">No apps with relevant permissions are installed</string>
-    <string name="privacy_guard_help_text">In this screen you can choose for which apps Privacy Guard should be active by simply tapping on them. Selected apps will not be able to access your personal data, such as contacts, messages, location or call logs. Long pressing on an entry allows to set specifically app permissions.\n\nBy default built-in apps are not shown. If you want to show them or filter apps to show only the ones requesting access to personal data by their permissions, select the respective options in the menu.</string>
+    <string name="privacy_guard_help_title">Help</string>
+    <string name="privacy_guard_reset_title">Reset</string>
+    <string name="privacy_guard_reset_text">Reset permissions?</string>
+    <string name="privacy_guard_help_text">In this screen you can choose which apps Privacy Guard should be active for by simply tapping on them. Selected apps will not be able to access your personal data such as contacts, messages or call logs. Long pressing an app\'s entry opens its app details screen.\n\nBuilt-in apps are not shown by default but can be revealed by selecting the respective menu option.</string>
     <string name="privacy_guard_manager_show_system_apps">Show built-in apps</string>
-    <string name="privacy_guard_manager_filter_permissions">Permission filter</string>
-    <string name="privacy_guard_app_ops_detail_dialog_title">Attention</string>
-    <string name="privacy_guard_app_ops_detail_dialog_text">Selected app does not request permissions which access personal data. Do you want to modify the other permissions?</string>
-    <string name="privacy_guard_app_ops_detail_reset_dialog_text">Reset all permissions back to default?</string>
-    <string name="app_ops_btn_text">Modify</string>
-    <string name="app_ops_no_item_text">This app has no changeable permissions.</string>
     <string name="privacy_guard_advanced_settings_title">Advanced</string>
 
     <!-- App ops detail -->
@@ -418,7 +413,7 @@
     <string name="app_ops_summaries_modify_call_log">modify call log</string>
     <string name="app_ops_summaries_read_calendar">read calendar</string>
     <string name="app_ops_summaries_modify_calendar">modify calendar</string>
-    <string name="app_ops_summaries_wifi_scan">Wi\u2011Fi scan</string>
+    <string name="app_ops_summaries_wifi_scan">Wi-Fi scan</string>
     <string name="app_ops_summaries_notification">notification</string>
     <string name="app_ops_summaries_cell_scan">cell scan</string>
     <string name="app_ops_summaries_call_phone">call phone</string>
@@ -451,25 +446,25 @@
     <string name="app_ops_summaries_keep_awake">keep awake</string>
     <string name="app_ops_summaries_monitor_location">monitor location</string>
     <string name="app_ops_summaries_monitor_high_power_location">monitor high power location</string>
-    <string name="app_ops_summaries_wifi_change">Wi\u2011Fi change</string>
+    <string name="app_ops_summaries_get_usage_stats">get app usage stats</string>
+    <string name="app_ops_summaries_mute_unmute_microphone">mute/unmute microphone</string>
+    <string name="app_ops_summaries_toast_window">display toasts</string>
+    <string name="app_ops_summaries_project_media">project media</string>
+    <string name="app_ops_summaries_activate_vpn">activate VPN</string>
+    <string name="app_ops_summaries_wifi_change">Wi-Fi change</string>
     <string name="app_ops_summaries_bluetooth_change">Bluetooth change</string>
-    <string name="app_ops_summaries_data_change">data change</string>
-    <string name="app_ops_summaries_wake_up">wake up</string>
-    <string name="app_ops_summaries_su">Superuser</string>
     <string name="app_ops_summaries_send_mms">send MMS</string>
     <string name="app_ops_summaries_read_mms">read MMS</string>
     <string name="app_ops_summaries_write_mms">write MMS</string>
     <string name="app_ops_summaries_auto_start">auto start</string>
-    <string name="app_ops_summaries_get_usage_stat">get usage stats</string>
-    <string name="app_ops_summaries_mute_microphone">mute/unmute microphone</string>
-    <string name="app_ops_summaries_toast_window">toast window</string>
-    <string name="app_ops_summaries_project_media">project media</string>
-    <string name="app_ops_summaries_vpn">activate VPN</string>
-    <string name="app_ops_summaries_nfc">nfc change</string>
+    <string name="app_ops_summaries_nfc_change">nfc change</string>
     <string name="app_ops_summaries_delete_sms">delete SMS</string>
     <string name="app_ops_summaries_delete_mms">delete MMS</string>
     <string name="app_ops_summaries_delete_contacts">delete contacts</string>
     <string name="app_ops_summaries_delete_call_log">delete call log</string>
+    <string name="app_ops_summaries_data_change">data change</string>
+    <string name="app_ops_summaries_wake_up">wake up</string>
+    <string name="app_ops_summaries_su">Superuser</string>
 
     <string name="app_ops_labels_location">Location</string>
     <string name="app_ops_labels_vibrate">Vibrate</string>
@@ -504,25 +499,25 @@
     <string name="app_ops_labels_notification_volume">Notification volume</string>
     <string name="app_ops_labels_bluetooth_volume">Bluetooth volume</string>
     <string name="app_ops_labels_keep_awake">Keep awake</string>
-    <string name="app_ops_labels_wifi_change">Wi\u2011Fi change</string>
+    <string name="app_ops_labels_get_usage_stats">Get app usage stats</string>
+    <string name="app_ops_labels_mute_unmute_microphone">Mute/unmute microphone</string>
+    <string name="app_ops_labels_toast_window">Display toasts</string>
+    <string name="app_ops_labels_project_media">Project media</string>
+    <string name="app_ops_labels_activate_vpn">Activate VPN</string>
+    <string name="app_ops_labels_wifi_change">Wi-Fi change</string>
     <string name="app_ops_labels_bluetooth_change">Bluetooth change</string>
-    <string name="app_ops_labels_data_change">Data change</string>
-    <string name="app_ops_labels_wake_up">Wake up</string>
-    <string name="app_ops_labels_su">Root access</string>
     <string name="app_ops_labels_send_mms">Send MMS</string>
     <string name="app_ops_labels_read_mms">Read MMS</string>
     <string name="app_ops_labels_write_mms">Write MMS</string>
     <string name="app_ops_labels_auto_start">Auto start</string>
-    <string name="app_ops_labels_get_usage_stat">Get usage stats</string>
-    <string name="app_ops_labels_mute_microphone">Mute/unmute microphone</string>
-    <string name="app_ops_labels_toast_window">Toast window</string>
-    <string name="app_ops_labels_project_media">Project media</string>
-    <string name="app_ops_labels_vpn">Activate VPN</string>
-    <string name="app_ops_labels_nfc">Nfc change</string>
+    <string name="app_ops_labels_nfc_change">NFC change</string>
     <string name="app_ops_labels_delete_sms">Delete SMS</string>
     <string name="app_ops_labels_delete_mms">Delete MMS</string>
     <string name="app_ops_labels_delete_contacts">Delete contacts</string>
     <string name="app_ops_labels_delete_call_log">Delete call log</string>
+    <string name="app_ops_labels_data_change">Data change</string>
+    <string name="app_ops_labels_wake_up">Wake up</string>
+    <string name="app_ops_labels_su">Root access</string>
 
     <!-- App ops categories -->
     <string name="app_ops_categories_location">Location</string>
@@ -532,6 +527,11 @@
     <string name="app_ops_categories_device">Device</string>
     <string name="app_ops_categories_bootup">Bootup</string>
     <string name="app_ops_categories_su">Superuser</string>
+
+    <!-- App ops permissions -->
+    <string name="app_ops_permissions_allowed">Allowed</string>
+    <string name="app_ops_permissions_ignored">Ignored</string>
+    <string name="app_ops_permissions_always_ask">Always ask</string>
 
     <!-- Recents panel settings -->
     <string name="recents_panel_settings">Recents panel settings</string>
