--- a/res/xml/privacy_settings_cyanogenmod.xml
+++ b/res/xml/privacy_settings_cyanogenmod.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014 The Fusion Project
+<!--
+     Copyright (C) 2014 The CyanogenMod Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,41 +14,24 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+        android:title="@string/privacy_settings_title">
 
-<PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <PreferenceCategory
-        android:key="app_security"
-        android:title="@string/app_security_title">
-
-         <Preference
-            android:fragment="com.android.settings.fusion.privacyguard.PrivacyGuardManager"
+        <Preference
             android:key="privacy_guard_manager"
+            android:title="@string/privacy_guard_manager_title"
             android:summary="@string/privacy_guard_manager_summary"
-            android:title="@string/privacy_guard_manager_title" />
+            android:fragment="com.android.settings.privacyguard.PrivacyGuardManager" />
 
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:title="@string/phone_security_title">
-
-         <PreferenceScreen
+        <PreferenceScreen
             android:key="blacklist"
             android:title="@string/blacklist_title"
             android:summary="@string/blacklist_summary"
             android:fragment="com.android.settings.blacklist.BlacklistSettings" />
 
-         <PreferenceScreen
+        <PreferenceScreen
             android:title="@string/block_notifications_title"
             android:summary="@string/block_notifications_summary"
             android:fragment="com.android.settings.cyanogenmod.SpamList" />
 
-         <com.android.settings.cyanogenmod.SecureSettingSwitchPreference
-            android:key="stats_collection"
-            android:title="@string/stats_collection_title"
-            android:summary="@string/stats_collection_summary"
-            android:defaultValue="true" />
-
-    </PreferenceCategory>
 </PreferenceScreen>
