Add a summary to Status bar expanded header settings.
Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -692,6 +692,7 @@
 
     <!-- Status bar Header -->
     <string name="status_bar_expanded_header_settings_title">Status bar header</string>
+    <string name="status_bar_expanded_header_settings_summary">Customize the expanded header layout</string>
     <string name="expanded_header_show_weather_title">Show weather</string>
     <string name="expanded_header_show_weather_summary">Enable to show the weather</string>
     <string name="expanded_header_show_weather_location_title">Show location</string>
