--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -25,11 +25,6 @@
                 android:fragment="com.android.settings.fusion.qs.QsSettings"
                 android:title="@string/qs_title" />
 
-        <PreferenceScreen
-                android:key="status_bar_expanded_header_settings"
-                android:fragment="com.android.settings.fusion.StatusBarExpandedHeaderSettings"
-                android:title="@string/status_bar_expanded_header_settings_title" />
-
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -47,6 +42,12 @@
                 android:title="@string/su_indicator"
                 android:summary="@string/su_indicator_summary"
                 android:defaultValue="true" />
+
+        <PreferenceScreen
+                android:key="status_bar_expanded_header_settings"
+                android:title="@string/status_bar_expanded_header_settings_title"
+                android:summary="@string/status_bar_expanded_header_settings_summary"
+                android:fragment="com.android.settings.fusion.StatusBarExpandedHeaderSettings" />
 
         <PreferenceScreen
                 android:key="status_bar_signal_settings"
