[WIP] Power menu customizations [2/2] (PS8)
power
reboot
screenshot
profile switcher
airplane mode
user switcher
bug reports
sound modes

[mikeioannina]: Modify for Cyanogenmod

Change-Id: I6f1ef036a5495ef49b9520c63df5ce322991cd08

Patchset: 8
http://review.cyanogenmod.org/#/c/83115/

Patchset: 9 (For Fusion rom)
Modify for Slims Power menu.
Settings: Use Switches instead of Checkboxes to maintain ui concistency

Todo: Change color icons.
      Make screenrecorder work for new powermenu

Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/xml/fusion_interface_settings.xml
+++ b/res/xml/fusion_interface_settings.xml
@@ -25,6 +25,11 @@
             android:summary="@string/app_circle_sidebar_summary_real"
             android:fragment="com.android.settings.fusion.AppCircleSidebar" />
 
+        <PreferenceScreen
+            android:key="power_menu"
+            android:title="@string/power_menu_title"
+            android:fragment="com.android.settings.fusion.PowerMenuActions" />
+
     <PreferenceCategory
         android:key="recents_panel"
         android:title="@string/recents_panel_settings" >
