Power menu: Enable settings & lockdown options
Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/values/fusion_arrays.xml
+++ b/res/values/fusion_arrays.xml
@@ -981,6 +981,8 @@
         <item>profile</item>
         <item>airplane</item>
         <item>users</item>
+        <item>settings</item>
+        <item>lockdown</item>
         <item>silent</item>
     </string-array>
 
