[WIP] Add customization for Quick Settings [2/2] (Updated to PS8)
Add a new section to customize Quick Settings.

Modified DraggableGridView to arrange the items differently.

Gave everything a "Material-ish" style.

Inversion and Hotspot tiles can be rearranged now.

Creadted a "Notification Drawer" category.

frameworks/base: http://review.cyanogenmod.org/83417

Change-Id: I88f9f067e60e66d51583219c497aab39cb187fb4

Patchset: 8
http://review.cyanogenmod.org/#/c/83418/

--- a/res/xml/fusion_main_settings.xml
+++ b/res/xml/fusion_main_settings.xml
@@ -36,6 +36,14 @@
             android:fragment="com.android.settings.fusion.ScreenAnimationsSettings"
             android:icon="@drawable/ic_fusion_animations_teal" />
 
+        <!-- Notification drawer -->
+        <PreferenceScreen
+            android:id="@+id/notification_drawer_settings"
+            android:title="@string/notification_drawer_title"
+            android:fragment="com.android.settings.fusion.NotificationDrawerSettings"
+            android:icon="@drawable/ic_settings_notification_drawer"
+                />
+
         <!-- Gestures -->
         <PreferenceScreen
             android:id="@+id/gesture_settings"
