--- a/res/menu/navbar_setup.xml
+++ b/res/menu/navbar_setup.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014 The Fusion Project
-
+<!-- Copyright (C) 2015 The Fusion Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -14,12 +13,13 @@
      limitations under the License.
 -->
 
-<resources>
-
-    <!-- Gesture anywhere -->
-    <color name="ga_gesture_color">@android:color/black</color>
-
-    <color name="setting_separator">#ff484848</color>
-    <color name="extension_list_item_color">#ff999999</color>
-
-</resources>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/menu_add_button"
+        android:icon="@drawable/ic_menu_add_dark"
+        android:showAsAction="always|withText"
+        android:orderInCategory="9999"/>
+    <item android:title="@string/change_layouts_title"
+        android:id="@+id/change_navbar_number"
+        android:showAsAction="always|withText"
+        android:orderInCategory="1"/>
+</menu>
