--- a/res/xml/fusion_navigation_settings.xml
+++ b/res/xml/fusion_navigation_settings.xml
@@ -18,32 +18,27 @@
     android:title="@string/navigation_pref_title">
 
     <PreferenceCategory
-        android:key="navigation_bar_settings"
-        android:title="@string/navbar_settings_category">
+        android:key="navigation_bar_enable"
+        android:title="@string/navigation_bar_category">
 
-    <SwitchPreference
-        android:key="enable_nav_bar"
-        android:title="@string/navbar_enable_bar_title"
-        android:summary="@string/navbar_enable_bar_summary"
-        android:defaultValue="false" />
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+            android:key="navbar_force_enable"
+            android:title="@string/navbar_force_enable_title"
+            android:summary="@string/navbar_force_enable_summary"
+            android:defaultValue="false" />
 
-    <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
-        android:key="navigation_bar_left"
-        android:title="@string/navigation_bar_left_title"
-        android:summary="@string/navigation_bar_left_summary"
-        android:defaultValue="false" />
+        <PreferenceScreen
+            android:key="navigation_bar"
+            android:title="@string/category_navbar"
+            android:fragment="com.android.settings.fusion.navbar.NavbarTabHostFragment"
+            android:dependency="navbar_force_enable" />
 
-    <PreferenceScreen
-        android:key="navbar_dimensions"
-        android:fragment="com.android.settings.fusion.NavBarDimensions"
-        android:title="@string/navbar_style_dimen_title"
-        android:dependency="enable_nav_bar" />
-
-    <ListPreference
-        android:key="keys_overflow_button"
-        android:title="@string/keys_overflow_title"
-        android:entries="@array/overflow_button_entries"
-        android:entryValues="@array/overflow_button_values" />
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+            android:key="navigation_bar_left"
+            android:title="@string/navigation_bar_left_title"
+            android:summary="@string/navigation_bar_left_summary"
+            android:dependency="navbar_force_enable"
+            android:defaultValue="false" />
 
     </PreferenceCategory>
 
