Show_weather: Fix switch state on clean install, enabled by default.
Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/xml/fusion_status_bar_expanded_header_settings.xml
+++ b/res/xml/fusion_status_bar_expanded_header_settings.xml
@@ -22,7 +22,7 @@
 	    android:key="expanded_header_show_weather"
 	    android:title="@string/expanded_header_show_weather_title"
 	    android:summary="@string/expanded_header_show_weather_summary"
-	    android:defaultValue="false" />
+	    android:defaultValue="true" />
 
     <SwitchPreference
 	    android:key="expanded_header_show_weather_location"
