Revert "PowerMenu: Remove silent option"
This reverts commit b03173b880d12a93207b7034ffa36d79e2d272a2.

--- a/res/values/fusion_arrays.xml
+++ b/res/values/fusion_arrays.xml
@@ -929,6 +929,7 @@
         <item>users</item>
         <item>settings</item>
         <item>lockdown</item>
+        <item>silent</item>
     </string-array>
 
     <string-array name="navbar_dialog_entries" translatable="false">
