--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -54,6 +54,7 @@
     <!-- Fusion Screen and Animations -->
     <string name="fusion_screen_animations_settings_title">Screen &amp; Animations</string>
     <string name="fusion_screen_settings_category">Screen options</string>
+    <string name="lockscreen_category">Lockscreen</string>
     <string name="fusion_animations_settings_category">Animation options</string>
     <!-- Fusion Gestures -->
     <string name="gesture_title">Gestures</string>
@@ -1320,5 +1321,9 @@
     <string name="omniswitch_start_settings_summary">Open OmniSwitch settings</string>
     <string name="omniswitch_first_time_title">Information</string>
     <string name="omniswitch_first_time_message">Make sure you have enabled OmniSwitch. You can do this by using \"Settings\" below</string>
+
+    <!-- Camera lockscreen swipe -->
+    <string name="camera_widget_hide">Disable lockscreen camera</string>
+    <string name="camera_widget_hide_summary">Allows you to disable swipe to open camera in lockscreen.</string>
 
 </resources>
