Fix hide dialer from lockscreen.
Also forgot to commit fix for "hide camera from lockscreen."
that is already present in the V5.0-15-01-2015 build.

Signed-off-by: Dragon <dragon7780@hotmail.nl>

--- a/res/xml/fusion_interface_settings.xml
+++ b/res/xml/fusion_interface_settings.xml
@@ -73,7 +73,7 @@
         android:title="@string/lockscreen_category" >
 
         <!-- Disable camera swipe -->
-        <SwitchPreference
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
             android:key="camera_widget_hide"
             android:title="@string/camera_widget_hide"
             android:summary="@string/camera_widget_hide_summary" />
