--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -1328,6 +1328,6 @@
 
     <!-- Dialer lockscreen swipe -->
     <string name="dialer_widget_hide">Disable lockscreen dialer</string>
-    <string name="dialer_widget_hide_summary">Allows you to disable swipe to open dialer in lockscreen.\nSystemUI will restart.</string>
+    <string name="dialer_widget_hide_summary">Allows you to disable swipe to open dialer in lockscreen.\nSystem will softreboot.</string>
 
 </resources>
