--- a/res/xml/fusion_statusbar_settings.xml
+++ b/res/xml/fusion_statusbar_settings.xml
@@ -11,20 +11,21 @@
                 android:title="@string/status_bar_clock" />
 
         <PreferenceScreen
-                android:key="network_traffic"
-                android:fragment="com.android.settings.fusion.NetworkTraffic"
-                android:title="@string/network_traffic_title" />
-
-        <PreferenceScreen
                 android:key="status_bar_battery_status_settings"
                 android:title="@string/status_bar_battery_status_settings_title"
                 android:summary="@string/status_bar_battery_status_settings_summary"
                 android:fragment="com.android.settings.fusion.StatusBarBatteryStatusSettings" />
 
         <PreferenceScreen
-                android:key="battery_style_pref"
-                android:fragment="com.android.settings.fusion.StatusBarBatteryBarSettings"
-                android:title="@string/battery_bar_settings" />
+                android:key="status_bar_battery_bar_settings"
+                android:title="@string/battery_bar_settings"
+                android:summary="@string/battery_bar_settings_summary"
+                android:fragment="com.android.settings.fusion.StatusBarBatteryBarSettings" />
+
+        <PreferenceScreen
+                android:key="network_traffic"
+                android:fragment="com.android.settings.fusion.NetworkTraffic"
+                android:title="@string/network_traffic_title" />
 
     </PreferenceCategory>
 
