Privacy guard: option to disable notification (2/2)
* added SecureSettingSwitchPreference from CM

Signed-off-by: BlackDragon <Dragon7780@hotmail.nl>

--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -1347,4 +1347,8 @@
     <!-- Default alarm ringtone -->
     <string name="alarm_ringtone_title">Default alarm ringtone</string>
 
+    <!-- Privacy guard notification -->
+    <string name="privacy_guard_notification_title">Notification</string>
+    <string name="privacy_guard_notifiation_summary">Show a notification if privacy guard is active</string>
+
 </resources>
