Powermenu screenshot delay [2/2]
Change-Id: I34a2213a2d3333c05feaba02a9058a097aa561ee

--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -39,6 +39,11 @@
         android:title="@string/power_menu_screenshot_title"
         android:defaultValue="false" />
 
+    <com.android.settings.fusion.NumberPickerPreference
+       android:key="screenshot_delay"
+       android:title="@string/powermenu_screenshot_delay_title"
+       android:dependency="screenshot" />
+
     <SwitchPreference
         android:key="profile"
         android:title="@string/power_menu_profiles_title"
