Settings: LS weather disabler (2/2)
Credit: LorDClockaN

Signed-off-by: BlackDragon <Dragon7780@hotmail.nl>

--- a/res/values/fusion_strings.xml
+++ b/res/values/fusion_strings.xml
@@ -1367,4 +1367,8 @@
     <string name="dpi">DPI</string>
     <string name="custom_density_warning">Restart the system and apply selected density?</string>
 
+    <!-- Lockscreen weather -->
+    <string name="lockscreen_weather_title">Lockscreen weather</string>
+    <string name="lockscreen_weather_summary">SystemUI will be restarted!</string>
+
 </resources>
